// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast component should match snapshot 1`] = `
<div>
  <div
    class="css-150u5n4"
    style="height: 0px;"
  >
    <i
      class="material-icons css-dx8f9f"
    >
      check_circle
    </i>
    <div
      class="css-18u318"
    >
      test
    </div>
    <div
      class="css-1jhfx10"
    >
      test
    </div>
    <i
      class="material-icons css-cm2otq"
    >
      close
    </i>
  </div>
</div>
`;

exports[`Toast component should match snapshot when information 1`] = `
<div>
  <div
    class="css-1rt2dcb"
    style="height: 0px;"
  >
    <i
      class="material-icons css-1fbyhyv"
    >
      info
    </i>
    <div
      class="css-1fzghdf"
    >
      test
    </div>
    <div
      class="css-1jhfx10"
    >
      test
    </div>
    <i
      class="material-icons css-cm2otq"
    >
      close
    </i>
  </div>
</div>
`;
